--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,11 +61,14 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   font_awesome_flutter: ^10.9.0
+  sizer: ^3.0.5
 dependency_overrides:
   speech_to_text: 7.1.0
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -74,6 +77,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -89,6 +96,7 @@ flutter:
   assets:
     - .env
     - assets/credentials/couple-expenses-467221-163c0fa3d585.json
+    - assets/icons/categories/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
