added new parser google and azure

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ flutter:
     - .env
     - assets/credentials/couple-expenses-467221-163c0fa3d585.json
     - assets/icons/categories/
+    - assets/keys/couple-expenses-467221-25db78910a71.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
