--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+#assets credentials
+assets/keys/
+assets/keys/*.json
+*.pem
+*.p12
