--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   font_awesome_flutter: ^10.9.0
   sizer: ^3.0.5
+  tutorial_coach_mark: ^1.3.1
 dependency_overrides:
   speech_to_text: 7.1.0
 dev_dependencies:
